--- a/my-first-project/src/app/user/user.html
+++ b/my-first-project/src/app/user/user.html
@@ -1,21 +1,30 @@
-<div class="bg-white rounded-xl shadow-sm border border-gray-100 p-3 mb-4 hover:shadow-md hover:border-gray-200 transition-all duration-300 ease-in-out">
+<div
+  class="bg-white rounded-xl shadow-sm border border-gray-100 p-3 mb-4 hover:shadow-md hover:border-gray-200 transition-all duration-300 ease-in-out"
+  (click)="onUserCLick()"
+>
   <div class="flex items-center space-x-4">
     <!-- User Avatar -->
     <div class="relative">
-      <div class="w-8 h-8 bg-gradient-to-br from-blue-500 to-purple-600 rounded-full flex items-center justify-center shadow-md">
+      <div
+        class="w-8 h-8 bg-gradient-to-br from-blue-500 to-purple-600 rounded-full flex items-center justify-center shadow-md"
+      >
         <svg class="w-5 h-5 text-white" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+          <path
+            d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
+          />
         </svg>
       </div>
       <!-- Status Indicator -->
-      <div class="absolute -bottom-0 -right-0 w-2 h-2 rounded-full border-1 border-white" 
-           [class]="isOnline() ? 'bg-emerald-500' : 'bg-gray-400'"></div>
+      <div
+        class="absolute -bottom-0 -right-0 w-2 h-2 rounded-full border-1 border-white"
+        [class]="isOnline ? 'bg-emerald-500' : 'bg-gray-400'"
+      ></div>
     </div>
-    
+
     <!-- User Info -->
-    <div class="flex-1 min-w-0 ">
-      <h3 class="text-md font-medium text-gray-900 truncate leading-tight">{{ name() }}</h3>
-      <p class="text-sm text-gray-500 mt-1 leading-tight">{{ email() }}</p>
+    <div class="flex-1 min-w-0">
+      <h3 class="text-md font-medium text-gray-900 truncate leading-tight">{{ name }}</h3>
+      <p class="text-sm text-gray-500 mt-1 leading-tight">{{ email }}</p>
     </div>
   </div>
 </div>
