--- a/my-first-project/src/styles.css
+++ b/my-first-project/src/styles.css
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-@import "tailwindcss";
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import 'tailwindcss';
+html,
+body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
