use @if and pass the user object itself using event emitter

--- a/my-first-project/src/app/app.html
+++ b/my-first-project/src/app/app.html
@@ -3,6 +3,6 @@
   <!-- Main Container for Left and Right Sidebars -->
   <div class="flex flex-row flex-1 overflow-hidden w-full h-full min-h-0">
     <app-sidebar (userSelected)="onUserSelect($event)" />
-    <app-right-sidebar [selectedUserId]="selectedUserId" />
+    <app-right-sidebar [selectedUser]="selectedUser" />
   </div>
 </div>
