--- a/my-first-project/src/app/app.html
+++ b/my-first-project/src/app/app.html
@@ -2,7 +2,7 @@
   <app-header />
   <!-- Main Container for Left and Right Sidebars -->
   <div class="flex flex-row flex-1 overflow-hidden w-full h-full min-h-0">
-    <app-sidebar (userSelected)="onUserSelect($event)" />
+    <app-left-sidebar (userSelected)="onUserSelect($event)" />
     <div class="flex-1 min-w-0">
       <app-right-sidebar [selectedUser]="selectedUser" />
     </div>
