omplement complete and cancel a task

--- a/my-first-project/src/app/component/header/header.html
+++ b/my-first-project/src/app/component/header/header.html
@@ -6,7 +6,7 @@
         <img
           alt="Todo Logo"
           class="w-10 h-10 object-contain rounded-2xl shadow-sm"
-          src="assets/todo.png"
+          src="../../../assets/todo.png"
         />
         <div
           class="absolute -inset-1 bg-gradient-to-r from-gray-200 to-gray-300 rounded-2xl opacity-20 blur-lg"
