--- a/my-first-project/src/app/component/right-sidebar/tasks/tasks.html
+++ b/my-first-project/src/app/component/right-sidebar/tasks/tasks.html
@@ -15,7 +15,11 @@
         <div>
           @for (task of tasks; track task.id; let last = $last) {
             <div [class]="last ? '' : 'mb-3'">
-              <app-task [task]="task"></app-task>
+              <app-task
+                [task]="task"
+                (taskComplete)="onTaskCompleted($event)"
+                (taskCancel)="onTaskCanceled($event)"
+              />
             </div>
           }
         </div>
