--- a/my-first-project/src/app/component/right-sidebar/right-sidebar.html
+++ b/my-first-project/src/app/component/right-sidebar/right-sidebar.html
@@ -52,6 +52,6 @@
 
   <!-- Tasks Component -->
   <div class="flex-1 min-h-0">
-    <app-tasks [userTasks]="userTasks" [selectedUser]="selectedUser"></app-tasks>
+    <app-tasks [selectedUser]="selectedUser" [userTasks]="userTasks"></app-tasks>
   </div>
 </aside>
